[gd_scene load_steps=6 format=2]

[ext_resource path="res://pingPong.gd" type="Script" id=1]
[ext_resource path="res://pong_elements/1.2 left_pallete.png.png" type="Texture" id=2]
[ext_resource path="res://pong_elements/1.3 right_pallete.png.png" type="Texture" id=3]
[ext_resource path="res://pong_elements/1.1 ball.png.png" type="Texture" id=4]
[ext_resource path="res://pong_elements/1.4 separator.png.png" type="Texture" id=5]

[node name="PingPongTable" type="Node2D"]
script = ExtResource( 1 )

[node name="leftPlayer" type="Sprite" parent="."]
position = Vector2( 40, 200 )
texture = ExtResource( 2 )

[node name="rightPlayer" type="Sprite" parent="."]
position = Vector2( 600, 200 )
texture = ExtResource( 3 )

[node name="ball" type="Sprite" parent="."]
position = Vector2( 320, 200 )
texture = ExtResource( 4 )

[node name="seperator" type="Sprite" parent="."]
position = Vector2( 320, 200 )
texture = ExtResource( 5 )

[node name="LeftScore" type="RichTextLabel" parent="."]
margin_left = 23.9166
margin_top = 16.7416
margin_right = 63.9166
margin_bottom = 56.7416

[node name="rightScore" type="RichTextLabel" parent="."]
margin_left = 573.998
margin_top = 16.7416
margin_right = 613.998
margin_bottom = 56.7416
